[project]
name = "enphase-proxy"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13 <3.14"

[tool.poetry]
name = "enphase-proxy"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Connect to your Enphase Envoy locally and proxy the API."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "enphase_proxy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13 <3.14"
quart = "^0.20.0"
tenacity = "^9.0.0"
hypercorn = {extras = ["uvloop"], version = "^0.17.3"}
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^6.0.0"
pytest-mypy = "^0.10.3"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
