[project]
name = "enphase-proxy"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Connect to your Enphase Envoy locally and proxy the API."
authors = [{name = "Paul Lockaby", email = "paul@paullockaby.com"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13 <3.14"
dynamic = ["dependencies"]

[project.scripts]
enphase-proxy = "enphase_proxy.__main__:main"

[tool.poetry]
packages = [{include = "enphase_proxy", from = "src"}]

# these are deprecated but necessary for dependabot
name = "enphase-proxy"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Connect to your Enphase Envoy locally and proxy the API."
authors = ["Paul Lockaby <paul@paullockaby.com>"]

[tool.poetry.dependencies]
python = "^3.13 <3.14"
quart = "^0.20.0"
tenacity = "^9.0.0"
hypercorn = {extras = ["uvloop"], version = "^0.17.3"}
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^6.0.0"
pytest-mypy = "^1.0.1"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
